K8/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginxpod
spec:
  containers:
  - name: my-container
    image: nginx
