K8/service-nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: nginxpod  # Ensure this label matches the pod's label
  ports:
  - protocol: TCP
    port: 80         # The port your pod listens on
    targetPort: 80    # The container port your pod listens on
  type: NodePort      # Makes the service accessible on a port on each node
